SERVER-42313 Fix forwarding in `ScopeGuard` ctor.

No need to have two distinct ctors.  Just create one and use forwarding.